Fix: set width of main on small screens to span the entire viewport

--- a/htdocs/css/mympd.css
+++ b/htdocs/css/mympd.css
@@ -584,3 +584,27 @@ img.covergrid-header {
 div.covergrid-header {
   padding: 0.37rem 0.75rem !important;
 }
+
+@media (min-width: 576px) {
+  .container {
+    max-width: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 960;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
